@@ -209,6 +209,11 @@ my $perltidyrc = <<'EOF';
 --no-outdent-long-comments
 --iterations=2
 -wbb="% + - * / x != == >= <= =~ !~ < > | & >= < = **= += *= &= <<= &&= -= /= |= >>= ||= .= %= ^= x="
+# This appears to be needed with recent Perl::Tidy versions and
+# Code::TidyAll. Otherwise it somehow turns UTF-8 POD text into
+# ISO-8859-1. Setting this to utf8 doesn't work. This is almost certainly
+# because of https://github.com/houseabsolute/perl-code-tidyall/issues/84
+--character-encoding=none
 EOF
 
 sub _perltidyrc {$perltidyrc}
